# GlassyClock

./: CMakeLists.txt  README.md  glassyclock.cpp  glassyclock.h  glassyclock.qrc  main.cpp
